fix: redis와 elasticsearch에서 가져온 메시지 통일성 작업